libraries/ckit/regression/valid-programs/a6.c
main () {
  int *i;
  int *j;
  int k;
  k = (i < j);
}
