libraries/ckit/regression/invalid-programs/r35.c
main () {
 int j;
 const int *y = &j;
 y=&j; 
 *y=3; 

}
